change image , remove http only jwt , get mail from token
