# back/swagger.json
@@ -400,6 +400,27 @@
         }
       }
     },
+    "/users/checkban/{email}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/users/": {
       "post": {
         "description": "",
@@ -451,6 +472,23 @@
           }
         ],
         "responses": {}
+      }
+    },
+    "/getmailfromtoken": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
       }
     }
   }
